search list row added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="something_went_wrong">Bir hata oluştu</string>
     <string name="connectivity_error">Lütfen internet bağlantınızı kontrol ediniz</string>
     <string name="internal_server_not_found">Bir hata oluştu lütfen tekrar deneyiniz.</string>
+    <string name="price_dollar">%1$s $</string>
 
 </resources>
