detail ui added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="connectivity_error">Lütfen internet bağlantınızı kontrol ediniz</string>
     <string name="internal_server_not_found">Bir hata oluştu lütfen tekrar deneyiniz.</string>
     <string name="price_dollar">%1$s $</string>
-
+    <string name="title_activity_profile">Profile</string>
+    <string name="action_settings">Settings</string>
 </resources>
