--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="connectivity_error">Lütfen internet bağlantınızı kontrol ediniz</string>
     <string name="internal_server_not_found">Bir hata oluştu lütfen tekrar deneyiniz.</string>
     <string name="price_dollar">%1$s $</string>
-    <string name="title_activity_profile">Profile</string>
-    <string name="action_settings">Settings</string>
+    <string name="date">Tarih :</string>
+    <string name="price">Fiyat :</string>
+    <string name="all">Hepsi :</string>
+    <string name="movies">Film :</string>
+    <string name="music">Müzik :</string>
+    <string name="apps">Uygulama :</string>
+    <string name="books">Kitap :</string>
+    <string name="no_result">Sonuç Bulanamadı</string>
+    <string name="description">Açıklama</string>
+
 </resources>
